--- a/companyservice/src/main/resources/application.yml
+++ b/companyservice/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name=companyservice
+    name: company-service
   datasource:
     url: jdbc:postgresql://localhost:5432/companydb
     username: fara
@@ -15,3 +15,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://discovery-service:8761/eureka/
