--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  discovery-service:
-    build: ./discovery-service
-    container_name: discovery-service
-    ports:
-      - "8761:8761"
-    environment:
-      - SPRING_CLOUD_COMPATIBILITY_VERIFIER_ENABLED=false
+#  discovery-service:
+#    build: ./discovery-service
+#    container_name: discovery-service
+#    ports:
+#      - "8761:8761"
+#    environment:
+#      - SPRING_CLOUD_COMPATIBILITY_VERIFIER_ENABLED=false
 
   userservice:
     build: ./userservice
@@ -16,10 +16,10 @@ services:
       - SPRING_DATASOURCE_USERNAME=fara
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_APPLICATION_NAME=userservice
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
     depends_on:
       - postgres-user
-      - discovery-service
+#      - discovery-service
 
   companyservice:
     build: ./companyservice
@@ -30,22 +30,22 @@ services:
       - SPRING_DATASOURCE_USERNAME=fara
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_APPLICATION_NAME=companyservice
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
     depends_on:
       - postgres-company
-      - discovery-service
+#      - discovery-service
 
-  api-gateway:
-    build: ./api-gateway
-    ports:
-      - "9000:9000"
-    environment:
-      - USER_SERVICE_URI=http://userservice:8080
-      - COMPANY_SERVICE_URI=http://companyservice:8081
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
-    depends_on:
-      - userservice
-      - companyservice
+#  api-gateway:
+#    build: ./api-gateway
+#    ports:
+#      - "9000:9000"
+#    environment:
+#      - USER_SERVICE_URI=http://userservice:8080
+#      - COMPANY_SERVICE_URI=http://companyservice:8081
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8761/eureka/
+#    depends_on:
+#      - userservice
+#      - companyservice
 
   postgres-user:
     image: postgres:17
