--- a/userservice/Dockerfile
+++ b/userservice/Dockerfile
@@ -1,9 +1,19 @@
-FROM openjdk:17-jdk-slim
+# ─── STAGE 1: Build with Maven ────────────────────────────────────────────────
+FROM maven:3.9.0-eclipse-temurin-17 AS builder
 
-ARG JAR_FILE=target/*.jar
+WORKDIR /workspace
 
-COPY ${JAR_FILE} app.jar
+COPY pom.xml ./
+RUN mvn dependency:go-offline -B
+
+COPY src ./src
+RUN mvn clean package -DskipTests -B
+
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
+
+COPY --from=builder /workspace/target/*-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
