--- a/companyservice/pom.xml
+++ b/companyservice/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>lombok</artifactId>
             <scope>annotationProcessor</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
