added validation to userservice create user endpoint

--- a/userservice/Dockerfile
+++ b/userservice/Dockerfile
@@ -1,19 +1,19 @@
-# ─── STAGE 1: Build with Maven ────────────────────────────────────────────────
+# ---- Stage 1: Build ----
 FROM maven:3.9.0-eclipse-temurin-17 AS builder
-
-WORKDIR /workspace
-
-COPY pom.xml ./
-RUN mvn dependency:go-offline -B
-
-COPY src ./src
-RUN mvn clean package -DskipTests -B
-
-FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
-COPY --from=builder /workspace/target/*-SNAPSHOT.jar app.jar
+# Copy entire project
+COPY . .
+
+# Build directly (dependencies + package)
+RUN mvn clean package -DskipTests
+
+# ---- Stage 2: Run ----
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
+COPY --from=builder /app/target/*-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
