--- a/companyservice/src/main/resources/application.yml
+++ b/companyservice/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-service:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://discovery-service:8761/eureka/
